--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div id="app"></div>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDHj4PiaqPmcSUBsqjLoQ4zcnavqacD0NA&sensor=false"></script> -->
 
     <script type="module" src="/src/main.js"></script>
