--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="/icon.png">
+    <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Caravan Review</title>
+    <link rel="manifest" href="/manifest.json">
   </head>
   <body>
     <div id="app"></div>
@@ -12,5 +13,22 @@
     <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDHj4PiaqPmcSUBsqjLoQ4zcnavqacD0NA&sensor=false"></script> -->
 
     <script type="module" src="/src/main.js"></script>
+    <script>
+    
+      // if ('serviceWorker' in navigator && 'Standalone' in window.navigator && !window.navigator.standalone) {
+      //    const manifest = document.querySelector('link[rel="manifest"]');
+      //     const icon = manifest.href;
+      //     const title = 'Caravan Review';
+      //     console.log(icon)
+      //     const url = window.location.href;
+      //     window.navigator.standalone = true;
+      //     window.addToHomeScreen({
+      //       title: title,
+      //       icon: icon,
+      //       url: url
+      //     });
+        
+      // }
+    </script>
   </body>
 </html>
