语言更换库

--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <script type="module" src="/src/main.js"></script>
     <script src="/web-audio-recorder-js-master/lib/WebAudioRecorder.js"></script>
+    <!-- <script src="https://unpkg.com/vconsole@latest/dist/vconsole.min.js"></script> -->
     <script>
-      
+      // var vConsole = new window.VConsole();
     
       // if ('serviceWorker' in navigator && 'Standalone' in window.navigator && !window.navigator.standalone) {
       //    const manifest = document.querySelector('link[rel="manifest"]');
